    now performs: stop(), setCommand(), start(). Multiple stops() could be
    given, so ... stop(), operator=(), ... is acceptable.
    The Process man-page is updated accordingly.

  * The DateTime class has been enlarged. It now contains members to reassign
    indivual time components as well as members to compare the (in)equality of
    the times represented by two DateTime objects.

bobcat (1.16.1)

  * The `build' script `library' command bow has an additional optional 
    argument `strip' to strip the shared library. By default the library is 
    not stripped.

bobcat (1.16.0)

  * Leftover `String' in string/unescape replaced by `std::string'.

  * Added missing A2x.to<Type>() member template to A2x (cf. C++ Annotations).
    
bobcat (1.15.0)

  * The Glob constructor no longer requires a static_cast when multiple flags
    are specified for its second argument.

  * The TableSupport class's vline(col) member now writes separator[col] to
    the output stream if it is available. If it is not available, no action is
    performed. Similarly, vline() now writes the trailing separator as well as
    a newline character. This is a more natural default behavior of
    TableSupport.

  * The Milter class interface  was adapted to libmilter-dev 8.14.1-2, 
    affecting milter/milter and milter/initialize.cc.

bobcat (1.14.2)

  * Added (still) missing headers to glob.ih, log.ih and tablesupport.ih
    required for proper compilation with g++ 4.3

  * The ServerSocket is created with the option SO_REUSEADDR, allowing servers
    to be restarted immediately following a shutdown of the server.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 13 Apr 2007 12:05:11 +0200

bobcat (1.14.1)

  * Member function template implementations consisting of a single line of
    code were given the `inline' specification.

  * The classes Table and TableSupport were redesigned. Their public and
    protected interfaces changed substantially.
