@@ -1,5 +1,8 @@
 #include "datetime.ih"
 
+// "Wed Jun 30 21:49:08 1993\n"
+//  0                       ^
+//                          24 
 namespace std
 {
 
@@ -9,7 +12,7 @@ ostream &operator<<(ostream &out, FBB::DateTime const &dt)
 
     asctime_r(&dt.d_tm, buf);
 
-    buf[25] = 0;            // remove final \n
+    buf[24] = 0;            // remove final \n
     return out << buf;
 }
 
