@@ -19,7 +19,8 @@ bobcat (1.17.1)
 
   * The DateTime class has been enlarged. It now contains members to reassign
     indivual time components as well as members to compare the (in)equality of
-    the times represented by two DateTime objects.
+    the times represented by two DateTime objects. Trailing \n is now not 
+    inserted if a DateTime object is inserted into an ostream.
 
 bobcat (1.16.1)
 
